# kinect2_tracker

./: CMakeLists.txt  README.md  package.xml  setup_nite.bash
include/: kinect2_tracker.hpp  kinect2_tracker_original.hpp
launch/: tf_creator.launch  tf_publisher.launch  tracker.launch
rviz/: visualization.rviz
src/: frame_creator_node.cpp  vrep_publisher_node.cpp
